<resources>

    <string name="app_name">ZaloSDK</string>
    <string name="add_account_button_label">Add new account</string>
	<string name="hint_zing_id">Zing ID</string>
    <string name="hint_password">Password</string>
	<string name="btn_login">Đăng nhập</string>
	
	<string name="zalosdk_app_name"></string>
    <string name="zalosdk_peter_pan">Peter Pan</string>
    <string name="zalosdk_activity_payment">PaymentActivity</string>
    <string name="zalosdk_payment_choosing">Chọn hình thức thanh toán</string>
    <string name="zalosdk_zingcard">Thẻ cào Zing</string>
    <string name="zalosdk_mobile_card">Thẻ cào điện thoại</string>
    <string name="zalosdk_mobileacc">Tài khoản điện thoại</string>
    <string name="zalosdk_atmacc">Tài khoản ATM nội địa</string>
    <string name="zalosdk_hotline">"Hotline: "</string>
    <string name="zalosdk_1900_561_558">1900 561 558</string>
    <string name="zalosdk_zalo_acc">Tài khoản ví Zalo</string>
    <string name="title_activity_zing_card">ZingCardActivity</string>
    <string name="zalosdk_billno">Mã đơn hàng</string>
    <string name="zalosdk_lk_mbc48374652">lk_MBC48374652</string>
    <string name="zalosdk_billinfo">Thông tin đơn hàng</string>
    <string name="zalosdk_billdes">Nạp điểm cho tài khoản Peter Pan</string>
    <string name="zalosdk_provider_info">Thông tin nhà cung cấp</string>
    <string name="zalosdk_provider_name">Happy Dice (VNG Corp)</string>
    <string name="zalosdk_cardcode">Mật mã của thẻ</string>
    <string name="zalosdk_cardseri">Số seri</string>
    <string name="zalosdk_card_info">Thông tin thẻ</string>
    <string name="zalosdk_ok">Đồng ý</string>
    <string name="zalosdk_submit">Đồng ý</string>
    <string name="zalosdk_send">Tiếp tục</string>
    <string name="zalosdk_mobi">mobi</string>
    <string name="zalosdk_vina">vina</string>
    <string name="zalosdk_viettel">viettel</string>
    <string name="zalosdk_price_choosing">Lựa chọn mức thanh toán (VNĐ)</string>
    <string name="zalosdk_pay">Thanh toán</string>    
    <string name="zalosdk_15_000">15.000</string>
    <string name="zalosdk_15_000_d">15.000 VNĐ</string>
    <string name="zalosdk_coin_unit"><u>VNĐ</u></string>
    <string name="zalosdk_user_phone">Thông tin thuê bao điện thoại</string>
    <string name="zalosdk_phone_number">Số điện thoại</string>
    <string name="zalosdk_processing">Đang xử lý</string>
    <string name="zalosdk_success">Giao dịch thành công</string>
   	<string name="zalosdk_unsuccess">Giao dịch thất bại</string>
   	<string name="zalosdk_amount_not_support">Không có kênh nào hỗ trợ mệnh giá thanh toán trên</string>
   	<string name="zalosdk_notification">Thông báo</string>
   	<string name="zalosdk_close">Đóng</string>
   	<string name="zalosdk_cancel">Trở lại</string>
   	<string name="zalosdk_otp">Nhập mã OTP</string>
   	<string name="zalosdk_otp_note">"Tin nhắn chứa mã OTP đã được gửi đến số điện thoại "</string>
   	<string name="zalosdk_otp_note_atm">"Tin nhắn chứa mã OTP đã được gửi đến số điện thoại của bạn"</string>
   	<string name="zalosdk_pay_info">Thông tin thanh toán</string>
   	<string name="zalosdk_pay_amount">Số tiền cần nạp</string>
   	<string name="zalosdk_select_bank">Chọn ngân hàng</string>
   	<string name="zalosdk_atm_card_holder_name">Tên chủ thẻ</string>
   	<string name="zalosdk_atm_vcb_acc_name">Tên truy cập VCB-iB@nking</string>
   	<string name="zalosdk_atm_vcb_acc_name_ex">VD: 7111000A00</string>
   	<string name="zalosdk_atm_vcb_acc_password">Mật khẩu VCB-iB@nking</string>   	
   	<string name="zalosdk_atm_card_holder_name_ex">VD: Nguyen Van A</string>
   	<string name="zalosdk_atm_card_code">Mã số thẻ</string>
   	<string name="zalosdk_atm_card_ex">VD: 9704000000000000</string>
   	<string name="zalosdk_atm_card_publish_date">Ngày phát hành:</string>
   	<string name="zalosdk_card_password">Mật mã thẻ</string>
   	<string name="zalosdk_card_password_ex">******</string>
   	<string name="zalosdk_captchar_inputing">Nhập chuỗi kí tự bảo mật bên trên</string>
   	<string name="zalosdk_slash">/</string>
   	<string name="zalosdk_month">tháng</string>
   	<string name="zalosdk_year">năm</string>
   	<string name="zalosdk_no_internet">Mạng không ổn định, vui lòng thử lại sau</string>
   	<string name="zalosdk_time_out">Hết thời gian giao dịch</string>
   	
   	
   	<string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
</resources>
