<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/zalosdk_background_grey_stroke_grey_corner_4" >

            <include
                android:id="@+id/zalosdk_header_payment_info"
                layout="@layout/zalosdk_header_payment_info" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zalosdk_header_payment_info"
                android:layout_gravity="center_horizontal"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <include layout="@layout/payment_method_container" />

                    <LinearLayout
                        android:id="@+id/view_root"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="7dip" >

                        <LinearLayout
                            android:id="@+id/zalosdk_card_publish_date_ctn_ctl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dip"
                            android:orientation="horizontal"
                            android:visibility="gone" >

                            <TextView
                                android:id="@+id/zalosdk_card_date_lb_ctl"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:gravity="center_vertical"
                                android:text="@string/zalosdk_atm_card_publish_date"
                                android:textColor="#292f33" />

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right" >

                                <EditText
                                    android:id="@+id/zalosdk_month_ctl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/zalosdk_border06"
                                    android:hint="@string/zalosdk_month"
                                    android:imeOptions="actionNext"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:padding="10dip"
                                    android:singleLine="true"
                                    android:textSize="13sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="fill_parent"
                                    android:gravity="center"
                                    android:padding="5dip"
                                    android:text="@string/zalosdk_slash"
                                    android:textSize="13sp" />

                                <EditText
                                    android:id="@+id/zalosdk_year_ctl"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/zalosdk_border06"
                                    android:hint="@string/zalosdk_year"
                                    android:imeOptions="actionGo"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:padding="10dip"
                                    android:singleLine="true"
                                    android:textSize="13sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <ToggleButton
                            android:id="@+id/zalosdk_ok_ctl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dip"
                            android:background="@drawable/zalosdk_togglebutton_background"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:textColor="#fff"
                            android:textOff="@string/zalosdk_submit"
                            android:textOn="@string/zalosdk_submit"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <ImageView
            android:id="@+id/zalosdk_exit_ctl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/i_close" />
    </RelativeLayout>

</RelativeLayout>