<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000" >

    <com.zing.zalo.zalosdk.payment.direct.DynamicLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/zalosdk_background_grey_stroke_grey_corner_4" >

            <include
                android:id="@+id/zalosdk_header_payment_info"
                layout="@layout/zalosdk_header_payment_info" />

            <EditText
                android:id="@+id/zalosdk_card_code_ctl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:background="@drawable/zalosdk_border06"
                android:hint="@string/zalosdk_cardcode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="20"
                android:padding="10dip"
                android:singleLine="true"
                android:textSize="13sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <EditText
                android:id="@+id/zalosdk_card_seri_ctl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/zalosdk_border06"
                android:hint="@string/zalosdk_cardseri"
                android:imeOptions="actionGo"
                android:inputType="textCapCharacters"
                android:maxLength="20"
                android:padding="10dip"
                android:singleLine="true"
                android:textSize="13sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zalosdk_header_payment_info"
                android:layout_gravity="center_horizontal"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <include layout="@layout/payment_method_container" />

                    <LinearLayout
                        android:id="@+id/view_root"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="7dip" >

                        <ToggleButton
                            android:id="@+id/zalosdk_ok_ctl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dip"
                            android:background="@drawable/zalosdk_togglebutton_background"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:textColor="#fff"
                            android:textOff="@string/zalosdk_submit"
                            android:textOn="@string/zalosdk_submit"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <ImageView
            android:id="@+id/zalosdk_exit_ctl"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:paddingBottom="10dip"
            android:src="@drawable/i_close" />
    </com.zing.zalo.zalosdk.payment.direct.DynamicLayout>

</RelativeLayout>