<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_container"
    android:background="#aa000000" >

    <com.zing.zalo.zalosdk.payment.direct.DynamicLayout
        android:id="@+id/sms_root_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/zalosdk_background_grey_stroke_grey_corner_4" >

            <include
                android:id="@+id/zalosdk_header_payment_info"
                layout="@layout/zalosdk_header_payment_info" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zalosdk_header_payment_info"
                android:layout_gravity="center_horizontal"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <include layout="@layout/payment_method_container" />

                    <LinearLayout
                        android:id="@+id/view_root"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="7dip" >

                        <LinearLayout
                            android:id="@+id/zalosdk_amount_selector_ctl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zalosdk_price_choosing"
                                android:textColor="#292f33" />

                            <android.support.v4.view.ViewPager
                                android:id="@+id/zalosdk_pager_ctl"
                                android:layout_width="match_parent"
                                android:layout_height="110dip" />

                            <LinearLayout
                                android:id="@+id/zalosdk_page_indicator_ctl"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="5dip"
                                android:gravity="center"
                                android:orientation="horizontal" >
                            </LinearLayout>
                        </LinearLayout>

                        <ToggleButton
                            android:id="@+id/zalosdk_send_ctl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dip"
                            android:background="@drawable/zalosdk_togglebutton_background"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:textColor="#fff"
                            android:textOff="@string/zalosdk_send"
                            android:textOn="@string/zalosdk_send"
                            android:textSize="20sp" />

                        <ToggleButton
                            android:id="@+id/zalosdk_ok_ctl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dip"
                            android:background="@drawable/zalosdk_togglebutton_background"
                            android:paddingBottom="10dip"
                            android:paddingTop="10dip"
                            android:textColor="#fff"
                            android:textOff="@string/zalosdk_submit"
                            android:textOn="@string/zalosdk_submit"
                            android:textSize="20sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progress_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:layout_margin="30dp"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <ImageView
            android:id="@+id/zalosdk_exit_ctl"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:paddingBottom="10dip"
            android:src="@drawable/i_close" />
    </com.zing.zalo.zalosdk.payment.direct.DynamicLayout>

    <ProgressBar
        android:id="@+id/progress_loading_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

</RelativeLayout>